--- a/classroom/nguyenduykhanh/BigBoss/CalulatorTheme/cal.css
+++ b/classroom/nguyenduykhanh/BigBoss/CalulatorTheme/cal.css
@@ -4,30 +4,30 @@ body{
 
 div{
             background-color: #fff;
-            width: 170px;
+            width: 180px;
             padding:15px;
             margin: 100px auto;
             border-radius: 5px;
             box-shadow: 0px 1px 20px rgba(0,0,0,0.2);
         }
 button{
-            width: 30px;
-            height: 20px;
+            width: 40px;
+            height: 30px;
             margin: 1px;
         }
-span{
-            min-width: 100px;
-            background-color: antiquewhite;
-            float: right;
-            text-align: right;
-        }
+#result{
+    margin-left: 47px;
+    float: left;
+    margin-top: -30px;
+    border: 1px solid #000;
+    width: 130px;
+    height: 25px;
+    background-color: beige;
+    text-align: right;
+}
 .themeSelect {
     float: right;
     margin-top: -32px
-}
-
-#result {
-    margin-right: 34px;
 }
 
 
