--- a/classroom/nguyenduykhanh/BigBoss/CalulatorTheme/dark.css
+++ b/classroom/nguyenduykhanh/BigBoss/CalulatorTheme/dark.css
@@ -1,4 +1,4 @@
-button {
-    background-color: #000;
-    color: #fff;
-}
+#changeTheme {
+            background-color: #000;
+            color: red;
+        }
