beautify css html js of form

--- a/classroom/nguyenduykhanh/jQuery/jForm/form.css
+++ b/classroom/nguyenduykhanh/jQuery/jForm/form.css
@@ -2,7 +2,6 @@ body {
     background: url(background.jpg) no-repeat;
     background-size: 1300px 800px;
 }
-
 #myForm {
     width: 600px;
     height: 280px;
@@ -20,36 +19,37 @@ h2 {
     font-family: 'Nova Flat', cursive;
     font-size: 35px
 }
-.ePass{
+.ePass {
     margin-left: 60px;
     margin-top: 50px;
-
 }
-#email{
-   float: right;
-   margin-top: -30px;
-   margin-right: 170px;
+#email {
+    float: right;
+    margin-top: -30px;
+    margin-right: 170px;
     width: 250px;
     background: #25262a;
-    font-family: 'Nova Flat', cursive;;
+    font-family: 'Nova Flat', cursive;
+    ;
 }
-#password, #rePassword {
+#password,
+#rePassword {
     float: right;
     margin-top: -27px;
     margin-right: 170px;
     width: 250px;
     background: #25262a;
 }
-#autoGen{
+#autoGen {
     float: right;
     margin-top: -28px;
     color: #000;
     background: #25262a;
-    color:burlywood;
+    color: burlywood;
     font-family: 'Nova Flat', cursive;
     margin-right: 7px
 }
-#rePassword{
+#rePassword {
     margin-top: -25px;
     background-color: #25262a;
     color: #fff;
@@ -57,24 +57,19 @@ h2 {
 .rePasswords {
     margin-top: 20px;
 }
-.emailSection{
+.emailSection {
     padding-bottom: 20px;
 }
-.passwords{
+.passwords {
     padding-top:
 }
-
-#autoGen{
-
-}
-.RegisSection {
+#autoGen {} .RegisSection {
     color: #000;
     margin-left: 335px;
     margin-top: 20px;
     font-weight: bold;
     color: #25262a;
 }
-
 #Register {
     background: url(regis.jpg) no-repeat;
     background-size: 100px 100px;
@@ -82,30 +77,9 @@ h2 {
     font-weight: bold;
     color: cyan;
 }
-
 .invalid {
-    font-family: 'Nova Flat', cursive;;
+    font-family: 'Nova Flat', cursive;
+    ;
     font-size: 10px;
     color: red;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
